# relora

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/relora/: Cargo.toml
apps/relora/benches/: tui_render_hot_paths.rs
apps/relora/src/: commands.rs  config.rs  drivers.rs  launcher.rs  lib.rs  main.rs  workspace.rs
apps/relora/src/tui/: colors.rs  grid.rs  input.rs  layout.rs  metrics.rs  mod.rs  render.rs  shortcuts.rs  snapshot_tests.rs  strings.rs  tests.rs
apps/relora/src/tui/snapshots/: launcher.snap  workspace_add_column_form.snap  workspace_alter_column_form.snap  workspace_create_table_form.snap  workspace_data_tab.snap  workspace_help_overlay.snap  workspace_insert_row_form.snap  workspace_row_inspector.snap  workspace_saved_sql.snap  workspace_sql_tab.snap  workspace_structure_editor_form.snap  workspace_structure_tab.snap
apps/relora/tests/: architecture.rs  cli.rs  monorepo_layout.rs  workspace.rs
crates/relora-app/: Cargo.toml
crates/relora-app/benches/: workspace_hot_paths.rs
crates/relora-app/src/: background.rs  completion.rs  editor.rs  lib.rs  sql_tools.rs  syntax.rs  templates.rs  tree.rs  view.rs  workspace.rs
crates/relora-core/: Cargo.toml
crates/relora-core/src/: app.rs  db.rs
crates/relora-core/tests/: app_state.rs
crates/relora-driver-mysql/: Cargo.toml
crates/relora-driver-mysql/src/: lib.rs  main.rs
crates/relora-driver-postgres/: Cargo.toml
crates/relora-driver-postgres/src/: lib.rs  main.rs
crates/relora-driver-sqlite/: Cargo.toml
crates/relora-driver-sqlite/src/: lib.rs  main.rs
docs/: feature-parity.md  packaging.md
scripts/: install.sh  package-release-bundle.cjs  smoke-test-source-build.sh  sync-version.cjs
