[workspace]
members = [
    "apps/relora",
    "crates/relora-app",
    "crates/relora-core",
    "crates/relora-driver-mysql",
    "crates/relora-driver-sqlite",
    "crates/relora-driver-postgres",
]
default-members = ["apps/relora"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
homepage = "https://github.com/murongg/relora"
repository = "https://github.com/murongg/relora.git"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
arboard = "=3.4.1"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
crossterm = "0.29"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
ratatui = "=0.28.1"
mysql = "=26.0.1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "=2.4.1"
