[package]
name = "relora"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Keyboard-first terminal database workspace built with ratatui."

[dependencies]
anyhow.workspace = true
arboard.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
relora-app = { path = "../../crates/relora-app" }
relora-core = { path = "../../crates/relora-core" }
