[package]
name = "relora-core"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared database traits and domain types for Relora."

[dependencies]
anyhow.workspace = true
serde.workspace = true
url.workspace = true
