[package]
name = "relora-driver-mysql"
version.workspace = true
edition.workspace = true

[[bin]]
name = "relora-driver-mysql"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mysql.workspace = true
relora-core = { path = "../relora-core" }
serde_json.workspace = true
url.workspace = true
