[package]
name = "relora-driver-sqlite"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "External SQLite driver sidecar for Relora."

[[bin]]
name = "relora-driver-sqlite"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
relora-core = { path = "../relora-core" }
rusqlite.workspace = true
serde_json.workspace = true
url.workspace = true
